--- a/style.css
+++ b/style.css
@@ -53,16 +53,49 @@ body {
 
 .input-container input {
   width: 100%;
-  padding: 0.625rem 0.625rem 0.625rem 0.625rem; /* 10px = 0.625rem, 40px = 2.5rem */
-  box-sizing: border-box;
+  padding: 0.625rem 0.625rem 0.625rem 0.625rem; 
+}
+input[type="checkbox"]{
+
+width: 20px;
+height: 20px;
+border: 2px solid #ccc;
+border-radius: 4px;
+cursor: pointer;
+position: relative;
+}
+input[type="checkbox"]:checked{
+  
+  background-color: #f7941d; 
+  border-color: #f7941d;
+  content: '✔'; 
+
+}
+input[type="checkbox"]:checked ::after {
+  content: "✔"; 
+  color: #f7941d;
+  font-size: 16px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% -50%);
 }
 
+input[type="checkbox"]:checked ::before {
+  content: "✔"; 
+  color: #f7941d;
+  font-size: 16px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% -50%);
+}
 .eye-icon {
   font-size: 1.5rem;
   right: 1rem;
   position: absolute;
   top: 50%;
-  right: 0.625rem; /* 10px */
+  right: 0.625rem; 
   transform: translateY(-50%);
   color: #888;
   pointer-events: none;
@@ -453,7 +486,7 @@ body {
   .login-box h2 {
     padding-top: 1rem;
     padding-bottom: 2rem;
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: 600;
     line-height: 2rem;
   }
@@ -472,6 +505,7 @@ body {
   .login-footer {
     padding: 20px 0;
     font-size: 1rem;
+    background-color: #506165;
   }
 
   .login-footer .lock {
@@ -507,7 +541,7 @@ body {
   .login-box a {
     display: block;
     font-size: 1.2rem;
-    color: #333;
+    color: #7291af;
     text-decoration: none;
     text-align: center;
     margin: 2.5rem 0;
@@ -521,48 +555,19 @@ body {
     padding: 0.8rem;
   }
   .userIcon {
-    position: absolute;
-    width: 2.5rem;
-    height: 2.5rem;
-    bottom: -52.5rem;
-    right: 1rem;
+    display: none;
+    bottom: 0rem;
     z-index: 1;
   }
   .promo{
-    flex: none;
-    width: 100%;
-    margin: 0;
+  display: none;
   }
   .device-display {
-    flex: none;
-    width: 100%;
-    margin: 0;
-    padding: 0px;
-  }
-  .promo p {
-    font-size: 1rem;
-  }
-  .device-header {
-    position: relative;
-    padding: 5rem;
-    top: 0pc;
-    background-color: #fff;
-    z-index: 1;
-  }
-  .ellipse-bg{
     display: none;
   }
-  .device-header .logo {
-    top: 0px;
-    left: 0px;
-}
-.desktop-phone-svg object {
-  width: 100%;
-}
-.desktop-phone-svg {
-  top:-65px;
-  left: 0px;
-}
+  body{
+    background: none;
+  }
 
 }
 
@@ -600,6 +605,7 @@ body {
   .login-footer {
     padding: 20px 0;
     font-size: 1.25rem;
+    background-color: #506165;
   }
 
   .login-footer .lock {
@@ -630,6 +636,7 @@ body {
   .login-box a {
     font-size: 1.3rem;
     margin: 3rem 0;
+    color: #7291af;
   }
 
   .login-box button {
@@ -639,53 +646,19 @@ body {
   }
 
   .userIcon {
-    position: absolute;
-    width: 2.5rem;
-    height: 2.5rem;
-    bottom: -52.5rem;
-    right: 1rem;
+    bottom: 0px;
     z-index: 1;
+    display: none;
   }
 
   .promo{
-    flex: none;
-    width: 100%;
-    margin: 0;
+   display: none;
   }
   .device-display {
-    flex: none;
-    width: 100%;
-    margin: 0;
-    padding: 0px;
-  }
-  .device-display {
-    flex: none;
-    width: 100%;
-    margin: 0;
-  }
-  .promo p {
-    font-size: 1rem;
-  }
-  .device-header {
-    position: relative;
-    padding: 5rem;
-    top: 0pc;
-    background-color: #fff;
-    z-index: 1;
-  }
-  .ellipse-bg{
     display: none;
   }
-  .device-header .logo {
-    top: 0px;
-    left: 0px;
-}
-.desktop-phone-svg object {
-  width: 100%;
-}
-.desktop-phone-svg{
-  top: -65px;
-    left: 0px;
-}
+  body{
+    background: none;
+  }
 
 }
